fix(block): icon-end aligns with header container when collapsible is false (#12784)
**Related Issue:** #12473 

## Summary

Aligns `icon-end` with header container when `collapsible` is `false`.

--- a/packages/calcite-components/src/components/block/block.scss
+++ b/packages/calcite-components/src/components/block/block.scss
@@ -144,8 +144,8 @@
 
 .header-container {
   @apply grid items-stretch;
-  grid-template: auto / auto 1fr auto auto;
-  grid-template-areas: "handle header control menu actions-end";
+  grid-template: auto / auto 1fr auto auto auto auto;
+  grid-template-areas: "handle header icon-end control menu actions-end";
 }
 
 .icon--start,
@@ -184,11 +184,10 @@
 }
 
 calcite-loader[inline] {
-  grid-area: control;
   @apply self-center;
 }
 
-calcite-handle {
+calcite-sort-handle {
   grid-area: handle;
 }
 
@@ -242,6 +241,7 @@ calcite-handle {
 
 .icon-end-container {
   @apply flex items-center;
+  grid-area: icon-end;
 }
 
 .toggle-icon {
